--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ jojovanbelgie }}/ue19-lab-05:latest
+          tags: ghcr.io/${{ github.repository_owner }}/ue19-lab-05:latest
